--- a/public/index.html
+++ b/public/index.html
@@ -2,37 +2,52 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="style.css">
-  <title>HASH TECHIE OFFICIAL</title>
+  <title>Foodie ChatBot</title>
 </head>
 <body>
     <section>
         <div class="form-box">
             <div class="form-value">
+                <div class="header">
+                    <h2>FOODIE APP</h2>
+                    <p>Joseph welcome to Foodie</p>
+                    <p>Order food with ease using our chatbot</p>
+                </div>
+
+                <div class="interaction">
+                    <p class="me"><span>hey</span></p>
+                    <p class="you"><span>wow</span></p>
+                    <p class="me"><span>hey</span></p>
+                    <p class="you"><span>wow</span></p>
+                    <p class="me"><span>hey</span></p>
+                    <p class="you"><span>wow</span></p>
+                    <p class="me"><span>hey</span></p>
+                    <p class="you"><span>wow</span></p>
+                    <p class="me"><span>hey</span></p>
+                    <p class="you"><span>wow</span></p>
+                    <p class="me"><span>hey</span></p>
+                    <p class="you"><span>wow</span></p>
+                    <p class="me"><span>hey</span></p>
+                    <p class="you"><span>wow</span></p>
+                    <p class="me"><span>hey</span></p>
+                    <p class="you"><span>wow</span></p>
+                    <p class="me"><span>hey</span></p>
+                    <p class="you"><span>wow</span></p>
+                    <p class="me"><span>hey</span></p>
+                    <p class="you"><span>wow</span></p>
+                </div>
+
                 <form action="">
-                    <h2>Login</h2>
-                    <div class="inputbox">
-                        <ion-icon name="mail-outline"></ion-icon>
-                        <input type="email" required>
-                        <label for="">Email</label>
-                    </div>
-                    <div class="inputbox">
-                        <ion-icon name="lock-closed-outline"></ion-icon>
-                        <input type="password" required>
-                        <label for="">Password</label>
-                    </div>
-                    <div class="forget">
-                        <label for=""><input type="checkbox">Remember Me  <a href="#">Forget Password</a></label>
-                      
-                    </div>
-                    <button>Log in</button>
-                    <div class="register">
-                        <p>Don't have a account <a href="#">Register</a></p>
+                    <div class="message">
+                        <div class="inputbox">
+                            <input type="text" placeholder="Enter Your Selection" required>
+                        </div>
+                        <button>Send</button>
                     </div>
                 </form>
             </div>
         </div>
     </section>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </body>
 </html>
