added functionality to receive messages from the frontend

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
                     <p class="you"><span>wow</span></p>
                 </div>
 
-                <form action="">
+                <form id="form" action="">
                     <div class="message">
                         <div class="inputbox">
-                            <input type="text" placeholder="Enter Your Selection" required>
+                            <input id="msg" type="text" placeholder="Enter Your Selection" required>
                         </div>
                         <button>Send</button>
                     </div>
@@ -30,6 +30,7 @@
             </div>
         </div>
     </section>
-
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
