--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,11 @@
             <div class="form-value">
                 <div class="header">
                     <h2>FOODIE APP</h2>
-                    <p>Joseph welcome to Foodie</p>
+                    <p id="welcome">Welcome to Foodie</p>
                     <p>Order food with ease using our chatbot</p>
                 </div>
 
                 <div class="interaction">
-                    <p class="me"><span>hey</span></p>
-                    <p class="you"><span>wow</span></p>
                 </div>
 
                 <form id="form" action="">
